# todoapp

./: .env  .example.product.env  .gitignore  .prettierrc  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  e2e.py  generate_secret.py  migrate.py  pyproject.toml  todoapp.code-workspace
client/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
client/.storybook/: main.ts  preview.ts  tsconfig.json
client/src/: App.css  App.tsx  AppRouter.tsx  index.css  (+1 more)
e2e/: package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
e2e/tests/: app.spec.ts  home.spec.ts
nginx/: nginx.conf
server/: .gitignore  Dockerfile  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 26f9a2c3339d_add_sessions_to_task.py  4419635450b0_initial_migration_with_users_categories_.py  796d1ae62978_createtaskorder.py  7dfa31d840e5_createtaskorders.py  bea2e90e7f05_update_created_at_2.py  d9c8197e1b14_initial_the_project.py  de272f1bf433_update_created_at.py
server/app/: conftest.py  contants.py  database.py
server/app/features/authenticate/: __init__.py  router.py  schemas.py
server/app/features/authenticate/__tests__/: test_authenticate.py
server/app/features/sessions/: __init__.py  router.py
server/app/features/sessions/__tests__/: test_session.py
server/app/features/tasks/: __init__.py  router.py  schemas.py
server/app/features/tasks/__tests__/: test_tasks.py  test_tasks_walkthrough.py
server/app/middlewares/: auth.py
server/app/models/: __init__.py  category.py  categoryTask.py  categoryTemplate.py  session.py  task.py  taskOrder.py  template.py  user.py
server/scripts/: database_scripts.sql
(+181 files in other folders)
