[project]
name = "todoapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ntt-vibekit",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
]

[tool.uv.sources]
ntt-vibekit = { path = "../ntt-vibekit", editable = true }

[tool.uv.workspace]
members = ["server"]