[project]
name = "todoapp-e2e"
version = "0.0.0"
description = "End-to-end tests for the TodoApp project"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = []

[tool.playwright]
test-dir = "tests"
output-dir = "test-results"
browser = "chromium"
