[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.135.3",
    "alembic>=1.18.4",
    "aiomysql>=0.2.0",
    "sqlalchemy>=2.0.49",
    "cryptography>=3.4.8",
]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "httpx>=0.24.0",
]